--- a/museum-adaptive/index.html
+++ b/museum-adaptive/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"-->
-<!--          name="viewport">-->
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Museum</title>
     <link href="assets/favicon.ico" rel="icon">
@@ -14,8 +12,6 @@
     <link rel="stylesheet" href="css/pop-up.css">
     <link rel="stylesheet" href="css/ripple.css">
 
-    <!--    <link  href="css/video-player.css" rel="stylesheet" />-->
-    <!--    <link href="assets/louvre.ico" rel="icon">-->
 
 </head>
 <body>
@@ -115,7 +111,6 @@
             </div>
         </section>
 
-        <!--            </div>-->
 
 <!--  .................. section-vr-tour  -->
 <!--        <div class="parallax">-->
@@ -160,7 +155,6 @@
                 </div>
 
                 <div class="video-player">
-<!--                    <img src="assets/img/play-big.png" alt="play-big">-->
                     <div class="video-player-screen" >
                         <video class="player-video"  poster="assets/video/poster0.jpg">
                             <source id="video-player-source" src="assets/video/video0.mp4" type='video/mp4' >
@@ -169,11 +163,8 @@
                             <img src="assets/img/play-big.png" alt="play-big">
                         </button>
                     </div>
-<!--                    <img src="./assets/video/poster.jpg" alt="poster">-->
                     <div class="video-control">
-<!--                        <img class="left" src="./assets/img/left.png" alt="left">-->
                         <img class="play" id="little-play" src="./assets/img/play.png" alt="play">
-<!--                        <img class="right" src="./assets/img/right.png" alt="right">-->
 <!--                        rewind-video-->
                         <input class="control-input video-length-control" type="range" value="54" min="0" max="100" step="1">
                         <img class="volume"  id="volume-btn" src="./assets/img/volume.png" alt="volume">
@@ -207,13 +198,6 @@
                     <div class="picture-inner-container">
 <!--                        <img src="assets/img/gallery/galery1.jpg" alt="">-->
                     </div>
-<!--                    <div class="picture-inner-container">-->
-<!--                        <img src="assets/img/gallery/galery6.jpg" alt="">-->
-<!--                    </div>-->
-<!--                    <div class="picture-inner-container">-->
-<!--                        <img src="assets/img/gallery/galery15.jpg" alt="">-->
-<!--                    </div>-->
-
                 </div>
 
                 </div>
@@ -228,7 +212,7 @@
                 <h2 class="section-title-dark section-title-gold underline-title style-title">Buy tickets</h2>
                 <div class="ticket-buy">
                     <div class="ticket-image-wrapper">
-                        <img src="./assets/img/ticket.jpg" alt="ticket image">
+                        <img src="./assets/img/ticket.jpg" loading="lazy" alt="ticket image">
                     </div>
                     <div class="ticket-type desk1920">
                         <h4 class="style-text">Ticket Type</h4>
@@ -404,8 +388,6 @@
                         </div>
                     </form>
                 </div>
-
-
                 </div>
         </section>
 
@@ -430,9 +412,6 @@
                     <div class="contact-map">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d656.2185253367016!2d2.337096829208467!3d48.8606110987055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671d877937b0f%3A0xb975fcfa192f84d4!2z0JvRg9Cy0YA!5e0!3m2!1sru!2sua!4v1633211913796!5m2!1sru!2sua" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
-
-<!--                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.874102365138!2d2.3354553150040793!3d48.86061107928773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671d877937b0f%3A0xb975fcfa192f84d4!2z0JvRg9Cy0YA!5e0!3m2!1sru!2sua!4v1633255683518!5m2!1sru!2sua" width="694" height="454" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
-<!--                    <img class="contact-map-image" src="./assets/img/map.jpg" alt="map">-->
 
                 </div>
             </div>
@@ -496,8 +475,3 @@
 </html>
 
 
-
-
-
-<!--                        <iframe id="video-player-screen-frame"  src="https://www.youtube.com/embed/zp1BXPX8jcU?controls=0&showinfo=0&modestbranding=1&rel=0&&iv_load_policy=3&showsearch=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>-->
-<!--                        </iframe>-->
